Initial Author Routes

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -9,11 +9,9 @@
 </head>
 
 <body>
-    UPPER SECTION PLACEHOLDER
-    <br>
+    <%- include('../partials/header') %>
+    <%- include('../partials/errorMessage') %>
     <%- body %>
-        <br>
-        LOWER SECTION PLACEHOLDER
 </body>
 
 </html>
