--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -12,5 +12,10 @@
 </form>
 <br>
 <% books.forEach(book => { %>
-    <div><%= book.title %></div>
+    <div>
+        <span><%= book.title %></span>
+        <a href="/books/<%= book.id %>">View</a>
+        <a href="/books/<%= book.id %>/edit">Edit</a>
+        <%- include('../partials/deleteForm', { url: `/books/${book.id}`}) %>
+    </div>
 <% }) %>
