--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,4 +1,4 @@
-<h2>Search Authors</h2>
+<h2 class="page-header">Search Authors</h2>
 <form action="authors" method="GET">
     <input type="text" name="name" placeholder="Name" value="<%= searchOptions.name %>" />
     <button type="submit">Search</button>
@@ -7,8 +7,10 @@
 <% authors.forEach(author => { %>
     <div>
         <span><%= author.name %></span>
-        <a href="/authors/<%= author.id %>">View</a>
-        <a href="/authors/<%= author.id %>/edit">Edit</a>
-        <%- include('../partials/deleteForm', { url: `/authors/${author.id}`}) %>
+        <div class="btn-row">
+            <a class="btn btn--primary" href="/authors/<%= author.id %>">View</a>
+            <a class="btn btn--primary" href="/authors/<%= author.id %>/edit">Edit</a>
+            <%- include('../partials/deleteForm', { url: `/authors/${author.id}`}) %>
+        </div>
     </div>
 <% }) %>
