--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,4 +1,4 @@
-<h2>Search Books</h2>
+<h2 class="page-header">Search Books</h2>
 <form action="books" method="GET">
     <input type="text" name="title" placeholder="Title" value="<%= searchOptions.title %>" />
     <br>
