--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,13 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/main.css">
     <title>Mybrary</title>
 </head>
 
 <body>
-    <%- include('../partials/header') %>
-    <%- include('../partials/errorMessage') %>
-    <%- body %>
+    <div class="container">
+        <%- include('../partials/header') %>
+        <div class="inner-container">
+            <%- include('../partials/errorMessage') %>
+            <%- body %>
+        </div>
+    </div>
 </body>
 
 </html>
