--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -4,6 +4,8 @@
 <div>Publish Date: <%= book.publishDate.toDateString() %></div>
 <div>Page Count: <%= book.pageCount %></div>
 <br>
-<a href="/books/<%= book.id %>/edit">Edit</a>
-<a href="/authors/<%= book.author.id %>">View Author</a>
-<%- include('../partials/deleteForm', { url: `/books/${book.id}` }) %>
+<div class="btn-row">
+    <a class="btn btn--primary" href="/books/<%= book.id %>/edit">Edit</a>
+    <a class="btn btn--primary" href="/authors/<%= book.author.id %>">View Author</a>
+    <%- include('../partials/deleteForm', { url: `/books/${book.id}` }) %>
+</div>
