--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,7 +1,11 @@
-<input
-    type="text"
-    name="name"
-    placeholder="Name"
-    value="<%= author.name %>"
->
-<br>
+<div class="form-row">
+    <div class="form-row__item">
+        <label>Name</label>
+        <input
+            type="text"
+            name="name"
+            placeholder="Name"
+            value="<%= author.name %>"
+        >
+    </div>
+</div>
