--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,7 +1,14 @@
 <h2 class="page-header">Search Authors</h2>
 <form action="authors" method="GET">
-    <input type="text" name="name" placeholder="Name" value="<%= searchOptions.name %>" />
-    <button type="submit">Search</button>
+    <div class="form-row">
+        <div class="form-row__item">
+            <label>Name</label>
+            <input type="text" name="name" placeholder="Name" value="<%= searchOptions.name %>" />
+        </div>
+    </div>
+    <div class="btn-row btn-row--end">
+        <button class="btn btn--primary" type="submit">Search</button>
+    </div>
 </form>
 <br>
 <% authors.forEach(author => { %>
