--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,34 +1,43 @@
-<input
-    type="text"
-    name="title"
-    placeholder="Title"
-    value="<%= book.title %>"
->
-<br>
-<select name="author">
-    <% authors.forEach(author => { %>
-        <% if(author.id === book.author?.toString()) { %>
-            <option selected label="<%= author.name %>" value="<%= author.id %>">
-        <% } else { %>
-            <option label="<%= author.name %>" value="<%= author.id %>">
-        <% } %>
-    <% }) %>
-</select>
-<br>
-<input
-    type="date"
-    name="publishDate"
-    value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>"
->
-<label>Publish Date</label>
-<br>
-<input
-    type="number"
-    name="pageCount"
-    placeholder="Page Count"
-    min="1"
-    value="<%= book.pageCount %>"
->
-<br>
-<textarea name="description" placeholder="Description"><%= book.description %></textarea>
-<br>
+<div class="form-row">
+    <div class="form-row__item">
+        <label>Title</label>
+        <input
+            type="text"
+            name="title"
+            placeholder="Title"
+            value="<%= book.title %>"
+        >
+    </div>
+    <div class="form-row__item">
+        <label>Author</label>
+        <select name="author">
+            <% authors.forEach(author => { %>
+                <% if(author.id == book.author) { %>
+                    <option selected label="<%= author.name %>" value="<%= author.id %>">
+                <% } else { %>
+                    <option label="<%= author.name %>" value="<%= author.id %>">
+                <% } %>
+            <% }) %>
+        </select>
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-row__item">
+        <label>Publish Date</label>
+        <input type="date" name="publishDate"
+            value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>"
+        >
+    </div>
+    <div class="form-row__item">
+        <label>Page Count</label>
+        <input type="number" name="pageCount" placeholder="Page Count" min="1"
+            value="<%= book.pageCount %>"
+        >
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-row__item">
+        <label>Description</label>
+        <textarea name="description" placeholder="Description"><%= book.description %></textarea>
+    </div>
+</div>
