--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,21 +1,33 @@
 <h2 class="page-header">Search Books</h2>
 <form action="books" method="GET">
-    <input type="text" name="title" placeholder="Title" value="<%= searchOptions.title %>" />
-    <br>
-    <input type="date" name="publishedAfter" placeholder="Published After" value="<%= searchOptions.publishedAfter %>" />
-    <label>Published After</label>
-    <br>
-    <input type="date" name="publishedBefore" placeholder="Published Before" value="<%= searchOptions.publishedBefore %>" />
-    <label>Published Before</label>
-    <br>
-    <button type="submit">Search</button>
+    <div class="form-row">
+        <div class="form-row__item">
+            <label>Title</label>
+            <input type="text" name="title" placeholder="Title" value="<%= searchOptions.title %>" />
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-row__item">
+            <label>Published After</label>
+            <input type="date" name="publishedAfter" placeholder="Published After" value="<%= searchOptions.publishedAfter %>" />
+        </div>
+        <div class="form-row__item">
+            <label>Published Before</label>
+            <input type="date" name="publishedBefore" placeholder="Published Before" value="<%= searchOptions.publishedBefore %>" />
+        </div>
+    </div>
+    <div class="btn-row btn-row--end">
+        <button class="btn btn--primary" type="submit">Search</button>
+    </div>
 </form>
 <br>
 <% books.forEach(book => { %>
     <div>
         <span><%= book.title %></span>
-        <a href="/books/<%= book.id %>">View</a>
-        <a href="/books/<%= book.id %>/edit">Edit</a>
-        <%- include('../partials/deleteForm', { url: `/books/${book.id}`}) %>
+        <div class="btn-row">
+            <a class="btn btn--primary" href="/books/<%= book.id %>">View</a>
+            <a class="btn btn--primary" href="/books/<%= book.id %>/edit">Edit</a>
+            <%- include('../partials/deleteForm', { url: `/books/${book.id}`}) %>
+        </div>
     </div>
 <% }) %>
