--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -20,14 +20,13 @@
         <button class="btn btn--primary" type="submit">Search</button>
     </div>
 </form>
-<br>
 <% books.forEach(book => { %>
-    <div>
-        <span><%= book.title %></span>
+    <div class="form-row">
         <div class="btn-row">
             <a class="btn btn--primary" href="/books/<%= book.id %>">View</a>
             <a class="btn btn--primary" href="/books/<%= book.id %>/edit">Edit</a>
             <%- include('../partials/deleteForm', { url: `/books/${book.id}`}) %>
         </div>
+        <span><%= book.title %></span>
     </div>
 <% }) %>
