--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -10,14 +10,13 @@
         <button class="btn btn--primary" type="submit">Search</button>
     </div>
 </form>
-<br>
 <% authors.forEach(author => { %>
-    <div>
-        <span><%= author.name %></span>
+    <div class="form-row">
         <div class="btn-row">
             <a class="btn btn--primary" href="/authors/<%= author.id %>">View</a>
             <a class="btn btn--primary" href="/authors/<%= author.id %>/edit">Edit</a>
             <%- include('../partials/deleteForm', { url: `/authors/${author.id}`}) %>
         </div>
+        <span><%= author.name %></span>
     </div>
 <% }) %>
